# lesson

./: .coverage  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
study/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
study/migrations/: 0001_initial.py  0002_subscription.py  0003_course_owner_lesson_owner_alter_course_preview_img.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: add_payment.py  add_user.py
users/migrations/: 0001_initial.py  0002_payment.py
