[tool.poetry]
name = "lesson"
version = "0.1.0"
description = ""
authors = ["Elizaveta <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
django = "^5.2.3"
python-dotenv = "^1.1.0"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
